# LearningMachine

./: .gitignore  .pre-commit-config.yaml
.github/workflows/: ci.yml
backend/: .env.example  pyproject.toml
backend/apps/attempts/: apps.py  models.py  serializers.py  services.py  tests.py  views.py
backend/apps/attempts/migrations/: 0001_initial.py
backend/apps/content/: admin.py  grading.py  models.py  serializers.py  tests.py  views.py
backend/apps/content/migrations/: 0001_initial.py
backend/apps/users/: tests.py
backend/apps/users/migrations/: 0001_initial.py
backend/config/: api_urls.py  settings.py  urls.py
frontend/: .gitignore  .prettierignore  eslint.config.ts  index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.vue  main.ts  style.css
frontend/src/api/: attempts.ts  client.ts  tests.ts
frontend/src/components/: AppHeader.vue
frontend/src/components/ui/button/: index.ts
frontend/src/layouts/: AppLayout.vue  AuthLayout.vue
frontend/src/router/: index.ts  types.d.ts
frontend/src/stores/: auth.ts
frontend/src/views/: LoginView.vue  ResultsView.vue  TestRunnerView.vue  TestsView.vue
