[project]
name = "learningmachine"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "django>=6.0.6",
    "django-environ>=0.13.0",
    "djangorestframework>=3.17.1",
    "pillow>=12.2.0",
    "psycopg[binary]>=3.3.4",
]

[dependency-groups]
dev = [
    "django-stubs>=6.0.5",
    "djangorestframework-stubs>=3.17.0",
    "mypy>=2.1.0",
    "pre-commit>=4.6.0",
    "ruff>=0.15.17",
]

[tool.ruff]
target-version = "py312"
line-length = 88
extend-exclude = ["**/migrations/**"]

[tool.ruff.lint]
ignore = ["RUF012"]
select = [
    "E",
    "W",
    "F",
    "I",
    "N",
    "UP",
    "B",
    "C4",
    "DJ",
    "SIM",
    "RUF",
]

[tool.mypy]
python_version = "3.12"
strict = true
warn_unreachable = true
plugins = ["mypy_django_plugin.main"]
exclude = ["./venv", "migrations"]

[[tool.mypy.overrides]]
module = "*.migrations.*"
ignore_errors = true

[[tool.mypy.overrides]]
module = ["environ.*"]
ignore_missing_imports = true

[tool.django-stubs]
django_settings_module = "config.settings"
